--- a/views/screen.xml
+++ b/views/screen.xml
@@ -1,9 +1,29 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
+    <record id="view_track_list" model="ir.ui.view">
+        <field name="name">view_track_list</field>
+        <field name="model">bad_odoo.track</field>
+        <field name="arch" type="xml">
+        <list js_class="bad_odoo_tracks_list">
+                <field name="thumbnail" widget="image"/>
+                <field name="name"/>
+                <field name="state"/>
+                <button name="action_play" icon="fa-play" type="object" string="Play" class="btn btn-primary" invisible="state != 'ready'"/>
+            </list>
+        </field>
+    </record>
+
+    <record id="actions_bad_odoo_tracks_act_window" model="ir.actions.act_window">
+        <field name="name">Tracks</field>
+        <field name="res_model">bad_odoo.track</field>
+        <field name="view_mode">list</field>
+        <field name="view_id" ref="view_track_list"/>
+    </record>
+
     <record id="actions_client_bad_odoo" model="ir.actions.client">
         <field name="name">Bad Odoo</field>
         <field name="tag">bad_odoo</field>
     </record>
 
-    <menuitem name="Bad Odoo" id="menu_root" action="actions_client_bad_odoo" web_icon="bad_odoo,static/description/menu.png"/>
+    <menuitem name="1-Bit Cinema" id="menu_tracks" action="actions_bad_odoo_tracks_act_window" web_icon="bad_odoo,static/description/menu.png"/>
 </odoo>
