--- a/static/scss/bad_odoo.scss
+++ b/static/scss/bad_odoo.scss
@@ -1,8 +1,7 @@
 .bad_odoo-container {
   padding: 1rem;
-  max-height: 100vh;
-  max-width: 100vw;
-  aspect-ratio: 1/1;
+  max-height: calc(100% - 100px);
+  aspect-ratio: 16/10;
   margin: auto;
 
   .bad_odoo-controls {
