--- a/views/screen.xml
+++ b/views/screen.xml
@@ -13,10 +13,30 @@
         </field>
     </record>
 
+    <record id="view_track_kanban" model="ir.ui.view">
+        <field name="name">view_track_kanban</field>
+        <field name="model">bad_odoo.track</field>
+        <field name="arch" type="xml">
+            <kanban class="o_kanban_mobile" sample="1" quick_create="false" js_class="bad_odoo_tracks_kanban">
+                <templates>
+                    <t t-name="card">
+                        <div class="d-flex">
+                                <field name="name"/>
+                            <field name="state" widget="label_selection" options="{'classes': {'draft': 'info', 'import': 'warn', 'ready': 'success'}}" class="ms-auto"/>
+                        </div>
+
+                        <field name="thumbnail" widget="image" class="ms-auto me-auto"/>
+                        <button name="action_play" type="object" string="Play" icon="fa-play" class="btn btn-outline-primary"/>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="actions_bad_odoo_tracks_act_window" model="ir.actions.act_window">
         <field name="name">Tracks</field>
         <field name="res_model">bad_odoo.track</field>
-        <field name="view_mode">list</field>
+        <field name="view_mode">kanban,list</field>
         <field name="view_id" ref="view_track_list"/>
     </record>
 
