--- a/views/screen.xml
+++ b/views/screen.xml
@@ -1,14 +1,21 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8' ?>
 <odoo>
     <record id="view_track_list" model="ir.ui.view">
         <field name="name">view_track_list</field>
         <field name="model">bad_odoo.track</field>
         <field name="arch" type="xml">
-        <list js_class="bad_odoo_tracks_list">
-                <field name="thumbnail" widget="image"/>
-                <field name="name"/>
-                <field name="state"/>
-                <button name="action_play" icon="fa-play" type="object" string="Play" class="btn btn-primary" invisible="state != 'ready'"/>
+            <list js_class="bad_odoo_tracks_list">
+                <field name="thumbnail" widget="image" />
+                <field name="name" />
+                <field name="state" />
+                <button
+                    name="action_play"
+                    icon="fa-play"
+                    type="object"
+                    string="Play"
+                    class="btn btn-primary"
+                    invisible="state != 'ready'"
+                />
             </list>
         </field>
     </record>
@@ -17,16 +24,36 @@
         <field name="name">view_track_kanban</field>
         <field name="model">bad_odoo.track</field>
         <field name="arch" type="xml">
-            <kanban class="o_kanban_mobile" sample="1" quick_create="false" js_class="bad_odoo_tracks_kanban">
+            <kanban
+                class="o_kanban_mobile"
+                sample="1"
+                quick_create="false"
+                js_class="bad_odoo_tracks_kanban"
+            >
                 <templates>
                     <t t-name="card">
                         <div class="d-flex">
-                                <field name="name"/>
-                            <field name="state" widget="label_selection" options="{'classes': {'draft': 'info', 'import': 'warn', 'ready': 'success'}}" class="ms-auto"/>
+                            <field name="name" />
+                            <field
+                                name="state"
+                                widget="label_selection"
+                                options="{'classes': {'draft': 'info', 'import': 'warning', 'ready': 'success'}}"
+                                class="ms-auto"
+                            />
                         </div>
 
-                        <field name="thumbnail" widget="image" class="ms-auto me-auto"/>
-                        <button name="action_play" type="object" string="Play" icon="fa-play" class="btn btn-outline-primary"/>
+                        <field
+                            name="thumbnail"
+                            widget="image"
+                            class="ms-auto me-auto"
+                        />
+                        <button
+                            name="action_play"
+                            type="object"
+                            string="Play"
+                            icon="fa-play"
+                            class="btn btn-outline-primary"
+                        />
                     </t>
                 </templates>
             </kanban>
@@ -37,7 +64,7 @@
         <field name="name">Tracks</field>
         <field name="res_model">bad_odoo.track</field>
         <field name="view_mode">kanban,list</field>
-        <field name="view_id" ref="view_track_list"/>
+        <field name="view_id" ref="view_track_kanban" />
     </record>
 
     <record id="actions_client_bad_odoo" model="ir.actions.client">
@@ -45,5 +72,10 @@
         <field name="tag">bad_odoo</field>
     </record>
 
-    <menuitem name="1-Bit Cinema" id="menu_tracks" action="actions_bad_odoo_tracks_act_window" web_icon="bad_odoo,static/description/menu.png"/>
+    <menuitem
+        name="1-Bit Cinema"
+        id="menu_tracks"
+        action="actions_bad_odoo_tracks_act_window"
+        web_icon="bad_odoo,static/description/menu.png"
+    />
 </odoo>
