--- a/static/scss/bad_odoo.scss
+++ b/static/scss/bad_odoo.scss
@@ -3,11 +3,37 @@
     max-height: calc(100% - 100px);
     aspect-ratio: 16/10;
     margin: auto;
+    font-family: monospace;
+
+    .bad_odoo-loading::after {
+        display: inline-block;
+        animation: dotty steps(1, end) 1s infinite;
+        content: "";
+    }
+
+    @keyframes dotty {
+        0% {
+            content: "";
+        }
+        25% {
+            content: ".";
+        }
+        50% {
+            content: "..";
+        }
+        75% {
+            content: "...";
+        }
+        100% {
+            content: "";
+        }
+    }
 
     .bad_odoo-controls {
         margin-bottom: 1rem;
         padding-bottom: 1rem;
         display: flex;
+        align-items: center;
 
         border-bottom: 1px solid #ddd;
 
